# hyperspot

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  Clippy.toml  Makefile  README.md  audit.toml  deny.toml  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yml
apps/hyperspot-server/: Cargo.toml
apps/hyperspot-server/src/: db_factory.rs  main.rs
apps/hyperspot-server/tests/: cli_smoke_tests.rs
config/: example-advanced.yaml  no-db.yaml  quickstart.yaml  server.yaml
docs/: API_INGRESS.md  ARCHITECTURE.md  LOCK_FREE_PATTERNS.md  MODKIT_UNIFIED_SYSTEM.md  MODULE_CREATION_PROMT.md  OUT_OF_PROCESS_MODULES_PROPOSAL.md  TRACING_SETUP.md
examples/modkit/users_info/: Cargo.toml
examples/modkit/users_info/gts/: errors.json
examples/modkit/users_info/src/: config.rs  errors.rs  lib.rs  module.rs
examples/modkit/users_info/src/api/rest/: dto.rs  error.rs  handlers.rs  mod.rs  routes.rs  sse_adapter.rs
examples/modkit/users_info/src/contract/: client.rs  error.rs
examples/modkit/users_info/src/domain/: error.rs  events.rs  mod.rs  pagination.rs  ports.rs  repo.rs  service.rs
examples/modkit/users_info/src/domain/ports/: audit.rs  mod.rs
examples/modkit/users_info/src/gateways/: local.rs
examples/modkit/users_info/src/infra/: mod.rs
examples/modkit/users_info/src/infra/audit/: http_audit_client.rs  mod.rs
examples/modkit/users_info/src/infra/storage/: entity.rs  mod.rs  sea_orm_repo.rs
examples/modkit/users_info/src/infra/storage/migrations/: initial_001.rs
examples/modkit/users_info/tests/: common.rs  errors_catalog.rs  handler_tracing.rs  integration_test.rs  outgoing_http_trace.rs  service_tracing.rs  simple_cursor_policy_test.rs  unit_test.rs  users_info_pg.rs
examples/modkit/users_info_exampe/src/: module.rs
examples/modkit/users_info_exampe/src/api/rest/: error.rs  routes.rs
examples/modkit/users_info_exampe/src/contract/: error.rs  model.rs
examples/modkit/users_info_exampe/src/infra/storage/: mapper.rs  mod.rs
examples/modkit/users_info_exampe/tests/: integration_test.rs
guidelines/: API_GUIDELINE.md  NEW_MODULE.md  README.md
libs/db/: Cargo.toml
libs/db/examples/: advisory_locks_demo.rs
libs/db/src/: advisory_locks.rs  errors.rs  lib.rs  odata.rs  odata_tests.rs
libs/db/tests/: odata_compile.rs
libs/modkit/: Cargo.toml  TODO.md
libs/modkit-db/: Cargo.toml
libs/modkit-db/examples/: advisory_locks_demo.rs
libs/modkit-db/src/: advisory_locks.rs  config.rs  lib.rs  manager.rs  odata.rs  options.rs  pool_opts.rs
libs/modkit-db/src/sqlite/: dsn.rs  mod.rs  path.rs  pragmas.rs
libs/modkit-db/tests/: common.rs  concurrency_tests.rs  config_tests.rs  db_generic.rs  manager_tests.rs  odata_compile.rs  options_tests.rs  pooling_tests.rs  precedence_tests.rs  sqlite_tests.rs
libs/modkit-errors/: Cargo.toml
libs/modkit-errors-macro/: Cargo.toml
libs/modkit-errors-macro/src/: lib.rs
libs/modkit-errors/src/: lib.rs
libs/modkit/examples/: lifecycle_example.rs  type_safe_api_builder.rs
libs/modkit/macros/: Cargo.toml  README.md
libs/modkit/macros/src/: lib.rs
libs/modkit/macros/tests/ui/fail/: caps_not_array.rs  caps_not_array.stderr  client_not_trait_path.rs  client_not_trait_path.stderr  ctor_string_literal.rs  ctor_string_literal.stderr  duplicate_lifecycle.rs  duplicate_lifecycle.stderr  duplicate_name.rs  duplicate_name.stderr  lifecycle_await_ready_wrong_type.rs  lifecycle_await_ready_wrong_type.stderr  lifecycle_entry_not_found.rs  lifecycle_entry_not_found.stderr  lifecycle_runner_not_async.stderr  lifecycle_unknown_arg.rs  lifecycle_unknown_arg.stderr  lifecycle_wrong_third_param.stderr  missing_name.rs  missing_name.stderr  unknown_capability.rs  unknown_capability.stderr
libs/modkit/macros/tests/ui/pass/: stateful_ok.rs  stateful_ready_ok.rs
libs/modkit/src/: client_hub.rs  context.rs  contracts.rs  lib.rs  lifecycle.rs  registry.rs  tests.rs
libs/modkit/src/api/: error.rs  error_layer.rs  mod.rs  odata.rs  odata_policy_tests.rs  odata_tests.rs  operation_builder.rs  pagination.rs  problem.rs  response.rs
libs/modkit/src/api/odata/: error.rs
libs/modkit/src/http/: client.rs  mod.rs  otel.rs  problem.rs  simple_otel.rs  sse.rs
libs/modkit/src/runtime/: mod.rs  runner.rs  shutdown.rs  tests.rs
libs/modkit/src/telemetry/: init.rs  mod.rs
libs/modkit/tests/: extractor_order_with_cursor.rs  integration_test.rs  lifecycle_macro_tests.rs  lifecycle_state.rs  macro_tests.rs  runner_tests.rs  typed_builder_compilefail.rs
libs/modkit/tests/ui/: no_handler.rs  no_handler.stderr  no_handler_no_response.rs  no_handler_no_response.stderr  no_response.rs  no_response.stderr
libs/odata-core/: Cargo.toml
libs/odata-core/src/: lib.rs  page.rs  tests.rs
libs/odata-core/tests/: convert.rs  order_roundtrip.rs
libs/runtime/: Cargo.toml
libs/runtime/src/: config.rs  logging.rs
libs/runtime/src/paths/: home_dir.rs
modules/api_ingress/: Cargo.toml  build.rs
modules/api_ingress/src/: assets.rs  config.rs  error.rs  example_user_module.rs  lib.rs  model.rs  openapi.rs  request_id.rs  router_cache.rs  web.rs
modules/api_ingress/tests/: integration_router.rs  request_id.rs
modules/users_info/: Cargo.toml
modules/users_info/src/: config.rs  lib.rs
modules/users_info/src/api/rest/: dto.rs  error.rs  handlers.rs  mod.rs  routes.rs
modules/users_info/src/contract/: client.rs  error.rs  model.rs
modules/users_info/src/domain/: service.rs
modules/users_info/src/gateways/: local.rs
modules/users_info/src/infra/storage/: entity.rs  mapper.rs
modules/users_info/src/infra/storage/migrations/: mod.rs
modules/users_info/tests/: integration_test.rs
scripts/: ci.ps1  smoke-test.sh
