[package]
name = "hyperspot-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "hyperspot-server"
path = "src/main.rs"

[dependencies]
mimalloc = { version="0.1" }
# Local crates
runtime = { path = "../../libs/runtime" }
modkit = { path = "../../libs/modkit" }
db = { path = "../../libs/db", features = ["sqlite"] }
api_ingress = { path = "../../modules/api_ingress"}
users_info = { path = "../../modules/users_info" }

anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
url = "2.5"
# SQLx for driver registration workaround
sqlx = { workspace = true, features = ["postgres", "sqlite"] }

[dev-dependencies]
tempfile = "3"
