[package]
name = "db"
version = "0.1.0"
edition = "2021"

[features]
pg = ["sqlx/postgres", "sea-orm?/sqlx-postgres"]
mysql = ["sqlx/mysql", "sea-orm?/sqlx-mysql"]
sqlite = ["sqlx/sqlite", "sea-orm?/sqlx-sqlite"]
sea-orm = ["dep:sea-orm"]
default = ["sea-orm"]

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time"] }
sqlx = { workspace = true, features = ["runtime-tokio", "tls-rustls", "macros", "uuid", "chrono"] }
fd-lock = "4"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
dirs = "5"
chrono = { version = "0.4", features = ["serde", "clock"] }
uuid = { version = "1", features = ["v4", "serde"] }
# optional ORM
sea-orm = { version = "1", optional = true, default-features = false, features = ["runtime-tokio-rustls"] }

[dev-dependencies]
tempfile = "3"
dirs = "5"

