[package]
name = "db"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
pg = ["sqlx/postgres", "sea-orm?/sqlx-postgres"]
mysql = ["sqlx/mysql", "sea-orm?/sqlx-mysql"]
sqlite = ["sqlx/sqlite", "sea-orm?/sqlx-sqlite"]
sea-orm = ["dep:sea-orm"]
default = ["sea-orm"]

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time"] }
sqlx = { workspace = true, features = ["runtime-tokio", "tls-rustls", "macros", "uuid", "chrono"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
dirs = "6"
chrono = { version = "0.4", features = ["serde", "clock"] }
# optional ORM
sea-orm = { version = "1", optional = true, default-features = false, features = ["runtime-tokio-rustls"] }
thiserror = "2.0"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
dirs = "6"

