[package]
name = "modkit-db"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
pg = ["sqlx/postgres", "sea-orm?/sqlx-postgres"]
mysql = ["sqlx/mysql", "sea-orm?/sqlx-mysql"]
sqlite = ["sqlx/sqlite", "sea-orm?/sqlx-sqlite"]
sea-orm = ["dep:sea-orm"]
integration = []

# Default: sqlite + sea-orm for local development
default = ["sqlite", "sea-orm"]

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time"] }
sqlx = { workspace = true, features = ["runtime-tokio", "tls-rustls", "macros", "uuid", "chrono"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
dirs = "6"
chrono = { version = "0.4", features = ["serde", "clock"] }
# optional ORM
sea-orm = { version = "1", optional = true, default-features = false, features = ["runtime-tokio-rustls", "with-uuid", "with-chrono", "with-rust_decimal", "macros"] }
thiserror = "2.0"
tracing = "0.1"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
odata-core = { path = "../odata-core" }
bigdecimal = "0.4"
rust_decimal = { version = "1", features = ["serde"] }
ryu = "1"
url = { workspace = true }
dsn = "1.0"
humantime-serde = "1.1"
regex = "1.10"
serde = { workspace = true }
serde_json = { workspace = true }
dashmap = "6.1"
figment = { version = "0.10", features = ["yaml", "env"] }

[dev-dependencies]
tempfile = "3"
dirs = "6"
serde_yaml = "0.9"
testcontainers = "0.25"
testcontainers-modules = { version = "0.13", features = ["postgres", "mysql"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow = "1"

