[package]
name = "odata-core"
version = "0.1.0"
edition = "2021"

[features]
with-odata-params = ["dep:odata-params"]
with-utoipa = ["dep:utoipa"]

[dependencies]
bigdecimal = "0.4"
uuid = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
odata-params = { version = "0.4", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
thiserror = "1"
utoipa = { version = "5", optional = true }
