[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

[lib]
name = "runtime"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
atty = { version = "0.2"}
serde = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-log = { workspace = true }
file-rotate = { workspace = true }
figment = { version = "0.10", features = ["yaml", "env"] }
serde_json = { workspace = true }
tempfile = "3.0"
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["rt"] }
chrono = { workspace = true }
thiserror = "2.0"