[package]
name = "runtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "runtime"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-log = { workspace = true }
file-rotate = { workspace = true }
figment = { version = "0.10", features = ["yaml", "env"] }
serde_json = { workspace = true }
tempfile = "3.21"
tokio = { workspace = true }
chrono = { workspace = true }
thiserror = "2.0"