[package]
name = "api_ingress"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "api_ingress"
path = "src/lib.rs"

[dependencies]
modkit = { path = "../../libs/modkit" }
inventory = "0.3"
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }

# High-performance data structures
dashmap = { workspace = true }
arc-swap = { workspace = true }
nanoid = "0.4"

# Web framework dependencies (only for this module)
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tonic = { version = "0.14.2", optional = true }

# Time handling
chrono = { workspace = true }

# OpenAPI and embedded assets
utoipa = { workspace = true }
indexmap = "2.11"
http = "1.3"
rust-embed = "8"

[dev-dependencies]
async-trait = { workspace = true }
futures = "0.3"

[features]
grpc = ["tonic"]
debug-errors = []
embed_elements = []
otel = []

[build-dependencies]
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"] }
