[package]
name = "modkit-macros"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing", "printing", "derive"] }
heck = "0.5"
strsim = "0.11"

[dev-dependencies]
trybuild = "1"
tokio        = { workspace = true }
tokio-util   = { version = "0.7", features = ["rt"] }
anyhow = "1.0"
async-trait = "0.1"
inventory = "0.3"
modkit = { path = "..", default-features = false }
